Correction du header pour la version mobile sur chrome et brave

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ nav ul li {
 .header-btn:hover{
     border-top: 2px solid var(--main-color);
     color: var(--main-color);
+    cursor: pointer;
 }
 /* Hero */
 h1 {
@@ -107,6 +108,7 @@ h1 {
     color: white;
     background-color: var(--main-color);
     border-radius: 0 15px 15px 0;
+    cursor: pointer;
 }
 .fa-search {
     display: none;
@@ -134,6 +136,7 @@ h1 {
     box-shadow:inset 0px 0px 0px 2px #D9D9D9;
     border: 0px solid #D9D9D9;
     border-radius: 25px;
+    cursor: pointer;
 }
 
 .filter-btn:hover{
@@ -199,6 +202,7 @@ main {
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    cursor: pointer;
 }
 
 /****** Hebergements ***********/
@@ -224,6 +228,7 @@ main {
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    cursor: pointer;
 }
 .card-hebergement img {
     display: block;
@@ -257,6 +262,7 @@ main {
     font-size: 18px;
     font-weight: bold;
     background: none;
+    cursor: pointer;
 }
 
 /****** Populaires ***********/
@@ -273,6 +279,7 @@ main {
 .populaires-cards .card {
     display: flex;
     margin-top: 33px;
+    cursor: pointer;
 }
 
 .populaires-cards img {
@@ -320,7 +327,6 @@ main {
 #all-activities-cards{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     margin: 15px;
     justify-content: center;
 }
@@ -331,6 +337,7 @@ main {
     border-radius: 20px;
     box-shadow: 0px 3px 15px #00000010;
     overflow:hidden;
+    cursor: pointer;
 }
 .card-activites:hover{
     box-shadow: 0px 3px 15px #00000025;
@@ -349,6 +356,7 @@ main {
     font-weight: bold;
     font-size: 16px;
 }
+
 /* Footer */
 footer {
     display: flex;
@@ -424,19 +432,24 @@ a {
     #all-activities-cards{
         display: flex;
         flex-direction: row;
+        flex-wrap:wrap;
         margin: 15px;
     }
     .card-activites{
         width: 193px;
         height: 270px;
+        flex-grow: 1;
     }
     .card-activites img{
         height: 200px;
     }
-}
 
+}
 /* Small devices (phones, less than 768px) */
 @media screen and (max-width: 768px) {
+    body {
+        min-width: 375px;
+    }
     .main-container {
         margin: 0;
     }
@@ -450,7 +463,7 @@ a {
     }
 
     nav ul {
-        width: 100%;
+        width: 100vw;
         margin: 0;
         display: flex;
         flex-direction: row;
@@ -472,10 +485,8 @@ a {
     }
     .header-btn{
         margin: 0;
-        width: 50vw;
-        padding-top: 0;
-        padding-bottom: 15px;
         padding: 0 0 15px 0;
+        width: 50vw;
     }
     .header-btn:hover{
         border-top: 0;
